# megabone

./: .gitignore  pyproject.toml  requirements.txt  run.sh
projects/: arm.mgb  test.mgb  test_project.mgb  xi_tiger.json  xi_tiger.mgb
src/: MegaBone.code-workspace  __main__.py
src/megabone/: __init__.py  entry.py  resource_manager.py
src/megabone/IKSolver/: __init__.py  fabrik.py
src/megabone/builder/: __init__.py  menu_builder.py
src/megabone/command/: bone.py  sprite.py
src/megabone/controller/: __init__.py  app.py  editor.py  editor_controller.py  editor_protocol.py  main_controller.py  menu.py  menu_controller.py
src/megabone/dialog/: __init__.py  file_dialog.py  image_file_dialog.py  sprite_sheet_dialog.py
src/megabone/editor/: __init__.py  editor.py  grid.py  layer.py
src/megabone/event_filter/: pan.py  zoom.py
src/megabone/manager/: __init__.py  autosave.py  autosave_manager.py  dock.py  dock_manager.py  document.py  document_manager.py  recent_files.py  recent_files_manager.py  resource.py  resource_manager.py  status.py  status_bar_manager.py  tab.py  tab_manager.py
src/megabone/model/: animation.py  animation_track.py  attachment.py  base_command.py  bone.py  collection.py  command.py  document.py  document_manager.py  keyframe.py  property.py  serializable.py  sprite.py
src/megabone/qt/: __init__.py  core.py  gui.py  widget.py
src/megabone/ui/: __init__.py  animation_player.py  main_controller.py  main_window.py  menu_controller.py
src/megabone/util/: __init__.py  constants.py  image.py  types.py  utils.py
(+51 files in other folders)
